--- a/html/index.html
+++ b/html/index.html
@@ -6,4 +6,11 @@
 <body>
   <div id="image">
   </div>
+  <script>
+    $('#theDiv').prepend('<img id="theImg" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
+  </script>
+   <script>
+  http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js
+  </script>
 </body>
+
