--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     $('#theDiv').prepend('<img id="theImg" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
   </script>
    <script>
-  https://s3.amazonaws.com/learn-verified/painting-with-dog.gif
+  $("#image").append("hey hey hey hey!!!!!");
   </script>
 </body>
 
