automatically backed up by learn

--- a/html/index.html
+++ b/html/index.html
@@ -7,10 +7,7 @@
   <div id="image">
   </div>
   <script>
-    $('#theDiv').prepend('<img id="theImg" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
-  </script>
-   <script>
-  $("#image").append("hey hey hey hey!!!!!");
+    $('#image').prepend('<img id="theImg" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
   </script>
 </body>
 
