--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,8 @@
   <div id="image">
   </div>
   <script>
-    $('#image').append(src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
+    
+    $('#image').prepend($('<img>',{id:'theImg',src:"https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"}))
   </script>
 </body>
 
